# cubegb

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  pyproject.toml  requirements-app.txt  requirements-recognition.txt  requirements.txt
app/: __init__.py  server.py
app/static/: cgb-render.js  index.html  studio.js
bake/: __init__.py  baker.py
blender_addon/: cubegb_import.py
cgb/: __init__.py  io.py  schema.json  validate.py
comfyui_nodes/: __init__.py  nodes.py
docs/: baker.md  blender-addon.md  cgb-format.md  comfyui.md  recognition.en.md  recognition.md  studio.md  viewer.md
docs-agents/: HANDOFF-image-to-3d.md  development-log.md  session-log-per-object.md
docs-agents/dev-request/: CubeGB_deform_boolean_요청서.md  CubeGB_개발요청서.md
recognition/: __init__.py  compose.py  debug.py  depth.py  fit.py  mesh_fit.py  multiview.py  object_recon.py  oriented_fit.py  primfit.py  render.py  segment.py  shape2d.py
samples/: cat_knight_deformed.cgb  cat_knight_handmade.cgb  cat_knight_master.cgb  chair.cgb  keyhole_lock.cgb  simple_building.cgb  table.cgb  treasure_chest.cgb
scripts/: _build_doc_figures.py
test_images/: _SOURCES.md  _concept.py  _fetch.py  _synth.py
tests/: test_app.py  test_baker.py  test_boolean.py  test_compose.py  test_deform.py  test_fit_prior.py  test_io.py  test_mesh_fit.py  test_multiview.py  test_object_recon.py  test_oriented_fit.py  test_partial_sweep.py  test_primfit.py  test_segment.py  test_shape2d.py  test_validate.py
viewer/: index.html
